c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/incompatible_types/branch_mismatch.c
struct s1 {
  int a;
};

struct s2 {
  int b;
};

int main(void) {
  struct s1 x = {1};
  struct s2 y = {2};
  1 ? x : y; // can't have conditional branches with different struct types
}